--- a/EmployeeManagement/Views/Home/Details.cshtml
+++ b/EmployeeManagement/Views/Home/Details.cshtml
@@ -1,6 +1,9 @@
 ﻿@model EmployeeManagement.ViewModels.HomeDetailsViewModel
 
-
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Employee Details";
+}
 
  <h3>@ViewBag.PageTitle</h3> 
 
