--- a/EmployeeManagement/Views/Home/Index.cshtml
+++ b/EmployeeManagement/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@model IEnumerable<EmployeeManagement.Models.Employee>
 
-    <html xmlns="http://www.w3.org/1999/xhtml">
-    <head><title></title></head>
-    <body>
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Employee List";
+}
+    
         <table>
         <thead>
             <tr>
@@ -21,5 +23,4 @@
             }
         </tbody>
         </table>
-    </body>
-</html>
+    
