Sections in layout.cshtml

--- a/EmployeeManagement/Views/Home/Details.cshtml
+++ b/EmployeeManagement/Views/Home/Details.cshtml
@@ -20,3 +20,7 @@
 
 @* Note: Now our view is a strongly typed view. We can access the properties of the Employee model using the Model keyword.
 It uses the "@model EmployeeManagement.Models.Employee" directive to specify the model type for the view. *@
+
+@section Scripts{
+    <script src="~/js/CustomScript.js"></script>
+}
