--- a/EmployeeManagement/Views/Shared/_Layout.cshtml
+++ b/EmployeeManagement/Views/Shared/_Layout.cshtml
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width" />
     <link href="~/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <script src="~/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+    <link href="~/css/stylesheet.css" rel="stylesheet" />
 
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div>
+    <div class="container">
         @RenderBody()
     </div>
     @* <script src="~js/CustomScript.js"></script> *@
