--- a/EmployeeManagement/Views/Home/Details.cshtml
+++ b/EmployeeManagement/Views/Home/Details.cshtml
@@ -1,10 +1,7 @@
 ﻿@model HomeDetailsViewModel
 
-@{
-    ViewBag.Title = "Employee Details";
-}
-
- <h3>@ViewBag.PageTitle</h3> 
+ 
+ <h3>@Model.PageTitle</h3> 
 
 <div class="row justify-content-center m-3">
     <div class="col-12 col-md-8">
