--- a/EmployeeManagement/Views/Home/Index.cshtml
+++ b/EmployeeManagement/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@model IEnumerable<Employee>
 
-@{
+@* @{
     ViewBag.Title = "Employee List";
-}
+} *@
+
+<h3>@ViewBag.Title</h3>
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
     @foreach (var employee in Model)
